--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1154,6 +1154,7 @@ as we evaluated 3.8 billion QB, 480 million SKOS, and 10 million Disco triples.
 In order to get suitable statements for all vocabularies,  
 we normalize the total values which apply for all vocabularies
 by building the arithmetic mean over the individual vocabularies' percentage values. 
+\tb{More than 80\% of the overall approx. 55 million constraint violations are caused by \emph{QB} constraints.}
 
 \begin{table}[H]
 		\scriptsize
@@ -1190,29 +1191,43 @@ by building the arithmetic mean over the individual vocabularies' percentage val
     \end{center}
 \end{table}
 
-More than the half of them are $\mathcal{CT}_{B}$, nearly a third $\mathcal{CT}_{S}$, and only a sixth $\mathcal{CT}_{C}$ constraint types.
-For \emph{Disco}, \emph{QB}, and \emph{SKOS}, more than 50\% of the instantiated constraint types are $\mathcal{CT}_{B}$ constraint types 
-(for \emph{QB} even three quarters).
-\emph{Existential quantifications} (\emph{R-86}, 32.4\%, \emph{Disco}), \emph{data model consistency} (31.4\%, \emph{QB}), and \emph{structure} (28.6\%, \emph{SKOS}) are the constraint types the most constraints are instantiated from.
-Half of the overall 213 $\mathcal{CT}$ constraints are $\mathcal{CT}_{B}$ constraints (almost 40\% $\mathcal{C}_B ^{\mathcal{R}}$).
-This is not surprising as more than the half of the instantiated constraints types are $\mathcal{CT}_{B}$ constraint types.
-More than 50\% of the \emph{Disco} and \emph{QB} constraints are $\mathcal{CT}_{B}$ constraints.
-The \emph{SKOS} constraints, on the other side, are equally assigned to the three disjoint constraint type sets. 
-More than 80\% of the overall approx. 55 million constraint violations are caused by \emph{QB} constraints (see table \ref{tab:evaluation-constraint-violations}).
-The majority (86.7\%) of the constraint violations are caused by $\mathcal{CT}_{C}$ constraints and only 9\% by $\mathcal{CT}_{S}$ constraints.
-The fact that only 4\% of all constraint violations result from $\mathcal{CT}_{B}$ constraints, 
-even though, more than 50\% of all constraints are $\mathcal{CT}_{B}$ constraints,
-is an indicator that data producers achieve good data quality with respect to the constraints extracted by vocabularies.
-Two-thirds of the constraint violations, thrown for \emph{Disco} data sets, result from $\mathcal{CT}_{B}$ constraints,
-almost only $\mathcal{CT}_{C}$ constraints raised constraint violations for \emph{QB} data sets, and 
-nearly 80\% of the \emph{SKOS} constraint violations are caused by $\mathcal{CT}_{S}$ constraints.
+%More than the half of them are $\mathcal{CT}_{B}$, nearly a third $\mathcal{CT}_{S}$, and only a sixth $\mathcal{CT}_{C}$ constraint types.
+%For \emph{Disco}, \emph{QB}, and \emph{SKOS}, more than 50\% of the instantiated constraint types are $\mathcal{CT}_{B}$ constraint types 
+%(for \emph{QB} even three quarters).
+%\emph{Existential quantifications} (\emph{R-86}, 32.4\%, \emph{Disco}), \emph{data model consistency} (31.4\%, \emph{QB}), and \emph{structure} (28.6\%, \emph{SKOS}) are the constraint types the most constraints are instantiated from.
+
+Almost 1/2 of all 213 constraints and more than 50\% of the \emph{Disco} and the \emph{QB} constraints are vocabulary constraints.
+The \emph{SKOS} constraints, on the other side, are equally distributed among the three disjoint sets of constraint types. 
+\begin{hyp}
+A significant amount of 46 \% of the constraints are directly extractable from established and newly defined vocabularies. 
+\end{hyp} 
+
+Nearly 1/2 of the constraint violations are caused by complex constraints, 1/3 by simple constraints, and 1/5 by vocabulary constraints.
+2/3 of the constraint violations, thrown for \emph{Disco} data sets, result from vocabulary constraints,
+almost only conplex constraints raised constraint violations for \emph{QB} data sets, and 
+nearly 80\% of the \emph{SKOS} constraint violations are caused by simple constraints.
+
+\begin{hyp}
+The fact that only 1/5 of all constraint violations result from vocabulary constraints, 
+even though, 46\% of all constraints are vocabulary constraints,
+indicates that in general data conforms to the intended syntax and semantics of vocabularies.
+\end{hyp}
+
+For established vocabularies, vocabulary constraints caused nearly 0\% of all constraint violations (e.g. only 1.777 constraint violations for \emph{QB} constraints).  
+For newly defined vocabularies, however, 2/3 of all constraint violations are raised by vocabulary constraints. 
+\begin{hyp}
+Complex constraints are met by data represented by established vocabularies but not by data represented by newly developed vocabularies. 
+\end{hyp}
+It is likely that a newly developed vocabulary is still subject of constant change, that published data may not be consistent with its current version,
+and that early adopters did not properly understand its formal specification.
+
 \begin{hyp}
 A significant amount of 47\% of the violations refer to complex constraints that are not easily expressible in existing languages which confirms the necessity to provide suitable constraint languages.
 \end{hyp} 
-These days, vocabulary and simple constraints can be easily, concisely, and intuitively expressed by either modeling languages (e.g., RDF, RDFS, OWL 2) or constraint languages (e.g., ShEx, ReSh, and SPIN). 
-This is not the case, however, for complex constraints which still have to be expressed by plain SPARQL. 
-There is a huge motivation to extend existing constraint languages or to develop new constraint languages which enable to express complex constraints
-As a consequence, being able to express complex constraints more easily, concisely, and intuitively leads to significant improvements in data quality.
+\emph{Vocabulary} and \emph{simple constraints} can be easily, concisely, and intuitively expressed by either modeling languages (e.g., \emph{RDF}, \emph{RDFS}, \emph{OWL 2}) or constraint languages (e.g., \emph{ShEx}, \emph{ReSh}, \emph{SPIN}). 
+This is not the case, however, for \emph{complex constraints} which in most cases still have to be expressed by plain \emph{SPARQL}. 
+As almost the half of all constraint violations are caused by \emph{complex constraints}, 
+data quality can be significantly improved when existing constraint languages are extended or new constraint languages are developed to express \emph{complex constraints} more easily, concisely, and intuitively.
 
 Data quality is not bad since only a small amount of the constraint violations are caused by error constraints
 \emph{SBE} domain experts associated almost the half of the constraints with the severity levels $\mathcal{SL}_{0}$ (\emph{informational}) (47\%) and $\mathcal{SL}_{2}$ (\emph{error}) (45\%);
