--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1229,11 +1229,51 @@ This is not the case, however, for \emph{complex constraints} which in most case
 As almost the half of all constraint violations are caused by \emph{complex constraints}, 
 data quality can be significantly improved when existing constraint languages are extended or new constraint languages are developed to express \emph{complex constraints} more easily, concisely, and intuitively.
 
-Data quality is not bad since only a small amount of the constraint violations are caused by error constraints
-\emph{SBE} domain experts associated almost the half of the constraints with the severity levels $\mathcal{SL}_{0}$ (\emph{informational}) (47\%) and $\mathcal{SL}_{2}$ (\emph{error}) (45\%);
-only 8.5\% are $\mathcal{SL}_{1}$ (\emph{warning}) constraints.
-The violation of 80\% of the \emph{QB} constraints is very serious ($\mathcal{SL}_{2}$).
-More than 50\% of the \emph{Disco} and \emph{SKOS} constraints, however, are assigned to the weakest default severity level ($\mathcal{SL}_{0}$).
+\begin{table}[H]
+		\scriptsize
+    \begin{center}
+    \begin{tabular}{@{}lcccccccc@{}}
+    %       & \multicolumn{2}{c}{\textbf{Vocabularies}}
+    %\\  \cmidrule{2-3}
+		\hline
+    \multirow{2}{*}{} &
+      \multicolumn{2}{c}{\textbf{\emph{Disco}}} &
+      \multicolumn{2}{c}{\textbf{\emph{QB}}} &
+      \multicolumn{2}{c}{\textbf{\emph{SKOS}}} &
+      \multicolumn{2}{c}{\textbf{\emph{Total}}} \\
+    \textbf{} & C & CV & C & CV & C & CV & C & CV \\
+    \hline
+    %\\ \midrule
+		 & 143 & 3,575,002 & 35 & 45,635,861 & 35 & 5,540,988 & 213 & 54,751,851 \\
+		\hline
+		\textbf{\emph{complex}} & 25.9\% & 18.3\% & 37.1\% & \textbf{100\%} & \textbf{37.1\%} & 21.4\% & 33.4\% & \textbf{46.6\%} \\
+		\textbf{\emph{simple}} & 19.6\% & 15.7\% & 8.6\% & 0.0\% & \textbf{34.3\%} & \textbf{78.6\%} & 20.8\% & 31.4\% \\
+		\textbf{\emph{vocabulary}} & \textbf{54.6\%} & \textbf{66.1\%} & \textbf{54.3\%} & 0.0\% & \textbf{28.6\%} & 0.0\% & \textbf{45.8\%} & 22.0\% \\
+		%\hline
+		%\emph{CV (}$\mathcal{C}_B ^{\mathcal{R}}$\emph{)} & 2,333,365 (65.3\%) & 1,777 (0\%) & 0 (0\%) & 2,335,142 (4.3\%) \\
+		%\emph{CV (}$\overline{\mathcal{C}_B ^{\mathcal{R}}}$\emph{)} & 28,000 (0.8\%) & 0 (0\%) & 0 (0\%) & 28,000 (0.1\%) \\
+		\hline
+		\textbf{\emph{info}} & \textbf{52.5\%} & \textbf{52.6\%} & 11.4\% & 0.0\% & \textbf{60.0\%} & 41.2\% & \textbf{41.3\%} & 31.3\% \\
+		\textbf{\emph{warning}} & 7.0\% & 29.4\% & 8.6\% & \textbf{99,8\%} & 14.3\% & \textbf{58.8\%} & 10.0\% & \textbf{62.7\%} \\
+		\textbf{\emph{error}} & 40.6\% & 18\% & \textbf{80.0\%} & 0.3\% & 25.7\% & 0.0\% & \textbf{48.8\%} & 6.1\%\\
+    \bottomrule
+    \end{tabular}
+    \\ \emph{C (constraints), CV (constraint violations)}
+    \caption{Constraints and Constraint Violations}
+		\label{tab:evaluation-constraint-violations}
+    \end{center}
+\end{table}
+
+63\% of all constraint violations are caused by warning constraints which are only 10\% of all constraints. 
+Only 6\% of the constraint violations are caused by error constraints which are 49\% of all constraints.
+
+\begin{hyp}
+Data quality is good since only 6\% of the constraint violations are caused by error constraints which are 49\% of all constraints.
+\end{hyp} 
+
+80\% of the \emph{QB} constraints are error constraints.
+More than 50\% of the \emph{Disco} and \emph{SKOS} constraints, however, are informational constraints.
+
 For Disco, 1/6 of the constraint violations are serious.
 Although, only 8.5\% of all constraints are $\mathcal{SL}_{1}$ constraints,
 9 0f 10 constraint violations are caused by constraints associated with the default severity level $\mathcal{SL}_{1}$.
