--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1269,30 +1269,23 @@ Only 6\% of the constraint violations are caused by error constraints which are 
 
 \begin{hyp}
 Data quality is good since only 6\% of the constraint violations are caused by error constraints which are 49\% of all constraints.
+The percentage of severe constraint violations is very low, compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
 \end{hyp} 
 
 80\% of the \emph{QB} constraints are error constraints.
 More than 50\% of the \emph{Disco} and \emph{SKOS} constraints, however, are informational constraints.
-
-For Disco, 1/6 of the constraint violations are serious.
-Although, only 8.5\% of all constraints are $\mathcal{SL}_{1}$ constraints,
-9 0f 10 constraint violations are caused by constraints associated with the default severity level $\mathcal{SL}_{1}$.
-More than 50\% of all constraint violations thrown for \emph{Disco} data sets are not seen to be that significant ($\mathcal{SL}_{0}$).
-Almost all constraint violations raised by \emph{QB} constraints and 59\% of the constraint violations caused by \emph{SKOS} constraints are classified as warnings ($\mathcal{SL}_{1}$).  
-As this evaluation serves as indication for \emph{good} or \emph{bad} (meta)data quality, 
-we conclude that
-the metadata quality of all evaluated \emph{Disco} data sets is \emph{good} and that the metadata quality of all evaluated \emph{QB} and \emph{SKOS} data sets is \emph{satisfactory}.
+For Disco, 1/6 of the constraint violations are caused by error constraints.
+Almost all constraint violations raised by \emph{QB} constraints and 59\% of the constraint violations caused by \emph{SKOS} constraints are warnings.  
 \begin{hyp}
 In general, data quality is very high.
 The quality of data represented by established vocabularies is good,
 as serious constraint violations rarely appear.
 The quality of data represented by newly developed vocabularies, however, is worse,
 as serious constraint violations occur partially.
-For well-established vocabularies, the explicitly defined constraints are almost completely satisfied which demonstrates that constraint formulation in general works.
 \end{hyp} 
 
 \begin{hyp}
-The percentage of severe constraint violations is very low, compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
+For well-established vocabularies, the explicitly defined constraints are almost completely satisfied which demonstrates that constraint formulation in general works.
 \end{hyp}
 
 %For the vocabularies \emph{Disco}, \emph{QB}, and \emph{SKOS}, we defined 213 constraints of 53 constraint types .
