--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1412,7 +1412,7 @@ complex constraints are either informational or error constraints.
 As vocabulary constraints are directly extractable from vocabularies and therefore ensure the syntax and semantics of vocabularies,
 violations of vocabulary constraints are more severe than violations caused by simple constraints which are easily defined in addition to vocabulary constraints.
 In many cases, complex constraints are also needed to express severe constraints which cannot be expressed by modeling languages.
-The relation between complexity and severity shows the importance to develop constraint languages 
+The relation between complexity and severity shows the importance to develop constraint languages which are enable to express severe complex constraints. 
 
 \section{Related Work}
 \label{related-work}
