--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -254,7 +254,7 @@
 %\title{RDF Validation of Metadata \\ on Person-Level and Aggregated Data}
 %\title{RDF Constraints to Ensure High Quality \\ of Metadata and Data Represented by any Vocabulary }
 %\title{RDF Constraints to Ensure High Quality \\ of Metadata and Data}
-\title{RDF Constraint Types to Ensure High Data Quality}
+\title{Aspects of RDF Data Constraints in the Social, Behavioural and Economic Sciences}
 \subtitle{}
 
 \titlerunning{XXXXX}  % abbreviated title (for running head)
@@ -291,7 +291,7 @@ Based on our work in the DCMI RDF Application Profiles Task Group and in coopera
 
 In this paper, we formulate 246 constraints of 53 different types on six different vocabularies (Disco, QB, SKOS, PHDD, DCAT, XKOS) and classify them according to the complexity level of their type and their severity level. For 114 of these constraints, we evaluate the data quality of 15,694 data sets (4,26 billion triples) of research data for the social, behavioural, and economic (SBE) sciences obtained from 33 SPARQL endpoints. 
 
-Based on the results, we postulate three important findings: (1) A significant amount of 47\% of the violations refer to complex constraints that are not easily expressible in existing languages which confirms the necessity to provide suitable constraint languages. (2) For well-established vocabularies, the explicitly defined constraints are almost completely satisfied which demonstrates that constraint formulation in general works. (3) The percentage of severe constraint violations is very low, compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
+Based on the results, we postulate and discuss findings, like: (1) for well-established vocabularies, the explicitly defined constraints are almost completely satisfied which demonstrates that constraint formulation in general works. (2) A significant amount of 47\% of the violations refer to complex constraints that are not easily expressible in existing languages which confirms the necessity to provide suitable constraint languages.  (3) The percentage of severe constraint violations is very low, compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
 
 %The \textbf{contribution} of this paper is the development of a system 
 %(1) to classify RDF constraints (according to their severity levels) to evaluate the quality of (meta)data which may be represented by any vocabulary and 
@@ -319,7 +319,7 @@ and reuse data collected and archived for research \cite{Vardigan2008}.
 %the International Household Survey Network community (made up of more than 90 statistical agencies),
 %and ICPSR - the largest SBE data archive in the US.
 Increasingly, data professionals, data archives, data libraries, government statisticians (e.g. \url{data.gov}, \url{data.gov.uk}), and national statistical institutes
-are very interested in having their data be discovered and used by exposing their metadata (e.g. about unemployment rates or income) within the Web of Linked Data.
+are very interested in having their data be discovered and used by exposing their metadata (e.g. about unemployment rates or income\ke{wieso ist das metadata? Ich würde generell auch im text bei data bleiben, es sei denn, die unterscheidung von data und metadata ist relevant.}) within the Web of Linked Data.
 As \emph{DDI} XML documents are validated against diverse XSDs\footnote{\label{fnt:DDI-XSDs}\url{http://www.ddialliance.org/Specification/}} (see section \ref{related-work}),
 the \emph{SBE} community is used to have this functionality in the XML world.
 %Recently, members of the \emph{SBE} and Linked Data community developed the \emph{DDI-RDF Discovery Vocabulary (Disco)}\footnote{\url{http://rdf-vocabulary.ddialliance.org/discovery.html}}, 
@@ -368,6 +368,8 @@ We evaluated the (meta)data quality of large real world data sets (more than 4.2
 %Constraints are instantiated from constraint types in order to validate both metadata and data represented by any vocabulary. 
 %As constraint types are used to define constraints on (meta)data expressed by any vocabulary, the proposed constraint classification can be applied generically, i.e. vocabulary-independent. 
 
+\ke{in guter tradition unserer arbeitsgruppe würde ich mich als senior researcher um die einleitung kümmern, die gefällt mir so nicht}
+
 \section{Motivation}
 \label{motivation}
 
@@ -395,12 +397,12 @@ Aggregated data, which answers particular research questions, is derived from pe
 %it is more and more common to publish aggregated data as CSV files,
 The purpose of publicly available aggregated data is to get a first overview and to gain an interest in further analyses on the underlying person-level data.
 Aggregated data is more and more published in form of CSV files,
-allowing to perform data calculations.
+allowing to perform data calculations.\ke{abgeshen davon dass ich more and more nicht mehr sehen kann, ist der zusammenhang mit RDF daten und damit RDF providern im nächsten satz unklar}
 %For these calculations, definitions of the columns are needed (e.g. is a given variable interpreted numerically or as a string).
 %\emph{Physical Data Description (PHDD)}\footnote{\url{https://github.com/linked-statistics/physical-data-description}} is a vocabulary to represent data in tabular format in RDF.\tb{tabular data} 
 %The data could be either represented in records with character-separated values (CSV) or in records with fixed length. 
 Portals harvest metadata (as well as publicly available data) from multiple RDF data providers.
-To ensure high quality, (meta)data must satisfy certain criteria - specified in terms of RDF constraints. 
+To ensure high quality, (meta)data must satisfy certain criteria - specified in terms of RDF constraints.\ke{verwirrend. wie gesagt, können wir nicht bei RDF data bleiben? was anderes behandelt ihr doch eh nicht und qb enthält doch keine metadaten.} 
 
 For more detailed analyses, researchers refer to person-level data including additional variables needed to answer subsequent research questions
 %Although not that common, the other direction is also possible, 
@@ -427,7 +429,9 @@ are comparable, diverse constraints are checked:
 If a researcher only wants to get a first overview over comparable variables (use case 1), 
 covering the first three constraints may be sufficient,
 i.e., the violation of the first three constraints is more serious than the violation of the last constraint.
-If the intention of the researcher is to perform more sophisticated comparisons (use case 2), however, the user may raise the severity level of last constraint.
+If the intention of the researcher is to perform more sophisticated comparisons (use case 2), however, the user may raise the severity level of the last constraint.
+ 
+\ke{ich finde das immer noch recht verwirrend. Ist das mit den aggregierten Daten wichtig für dieses Paper? Wieso werden constraints nur gechecked wenn variablen auf vergleichbarkeit geprüft werden? das habt ihr doch gar nicht gemacht sondern ganz allgemein constraints für vokabulare aufgestellt. Ist QB und Disco nicht sowieso unabhängig von konkreten Variablen?}
  
 %After validating the metadata according to these constraints, portals offer added values to their customers, e.g., by searching over and comparing metadata of multiple providers. 
 
@@ -441,10 +445,12 @@ If the intention of the researcher is to perform more sophisticated comparisons 
 
 %\section{Running Example}
 %\label{running-example}
-\section{Vocabularies to Represent Metadata and Data in RDF}
+\section{Vocabularies to Represent Metadata and Data in RDF\ke{ganz schlechte überschrift... vorschlag: Examined Vocabularies oder Common Vocabularies in SBE sciences}}
 \label{rdf-representation}
 
 %In this section, we describe how data in rectangular format (\emph{PHDD}) and metadata on person-level data sets (\emph{Disco}), aggregated data sets (\emph{QB}), thesauri (\emph{SKOS}), and statistical classifications (\emph{XKOS}) are represented in RDF\footnote{The complete running example in RDF is available at: \url{https://github.com/boschthomas/rdf-validation/tree/master/data/running-example}} and how therefore reused vocabularies are interrelated.
+
+For our evaluation, we examined four different vocabularies commonly used in or developed for the SBE sciences which are briefly introduced in the following. For three of them, we analysed actual data according to constraint violations. For PHDD, there is not yet enough data available so we limit our examination to the vocabulary itself.\ke{Neuer Absatz von mir...}
 
 %\textbf{Metadata on Aggregated Data.}
 The \emph{RDF Data Cube Vocabulary (QB)}\footnote{http://www.w3.org/TR/vocab-data-cube/} is a W3C recommendation for representing metadata on \emph{data cubes}, i.e. multi-dimensional aggregated data, in RDF \cite{Cyganiak2010}. 
@@ -455,6 +461,7 @@ The variables \emph{year}, \emph{duration}, \emph{age}, and \emph{country} are \
 Data values, i.e., the availability of childcare services in percent over the population, are collected in a \emph{qb:DataSet}. 
 Each data value is represented inside a \emph{qb:Observation} which contains values for each dimension\footnote{The complete running example in RDF is available at: \url{https://github.com/boschthomas/rdf-validation/tree/master/data/running-example}}. 
 %(e.g., the year in which \emph{formal childcare} has been determined).
+\ke{Wieso springt das von einer sehr knappen Einführung direkt zu konkreten (beliebigen?) Variablen? Ich möchte wissen, wofür QB benutzt wird und gerne ein konkretes Beispiel sehen, um mir einen Data Cube vorstellen zu können.}
 
 %\textbf{Rectangular Data.}
 \emph{Physical Data Description (PHDD)}\footnote{\url{https://github.com/linked-statistics/physical-data-description}} is a vocabulary to represent data in tabular format in RDF enabling further aggregations and calculations. 
@@ -474,6 +481,7 @@ Where data collection is cyclic, data sets may be released as \emph{series},
 where each cycle produces one or more data sets. 
 %\emph{Missy} is an online service platform that provides systematically structured metadata for official statistics on European person-level data sets. 
 %This includes data documentation at the study and variable level as well as documentation materials, tools and further information. 
+\ke{Wieso jetzt wieder qb?}
 Aggregated (qb:DataSet) and underlying person-level data sets (\emph{disco:LogicalDataSet}) are connected by \emph{prov:wasDerivedFrom}. 
 The aggregated variable \emph{formal childcare} is calculated on the basis of six person-level variables 
 (e.g., \emph{Education at pre-school}\footnote{\url{http://www.gesis.org/missy/eu/metadata/EU-SILC/2011/Cross-sectional/original#2011-Cross-sectional-RL010}})
